--- a/graphql/tp-nodegraph/package.json
+++ b/graphql/tp-nodegraph/package.json
@@ -16,6 +16,7 @@
     "@as-integrations/express5": "^1.1.2",
     "@graphql-tools/schema": "^10.0.25",
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
@@ -23,6 +24,7 @@
     "express-validator": "^7.2.1",
     "graphql": "^16.11.0",
     "graphql-rate-limit-directive": "^2.0.6",
+    "graphql-scalars": "^1.24.2",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
